--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 header {
-    background-color: #424E61;
-    color: white;
+    background-color: #79cab6;
+    color: rgb(0, 0, 0);
     display: flex;
     justify-content: space-around;
     padding: 24px 0;
@@ -14,4 +14,47 @@ header {
 *{
     margin: 0;
     padding: 0;
+}
+
+body {
+    background-color:#4493ec;
+    font-family: 'Poppins', sans-serif;
+}
+
+.ragnarok {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 80px 0;
+}
+
+.titulo-ragnarok {
+    padding: 24px 0;
+}
+
+.conteudo-div-ragnarok {
+    margin-top: 8%;
+    width: 35%;
+}
+
+.deuses-div {
+    text-align: center;
+
+    justify-content: center;
+}
+
+.titulo-deuses {
+    padding: 24px;
+}
+
+.deuses-div {
+    display: grid;
+    grid-template-columns: 20% 20%;
+    display: flex;
+}
+
+.rodape {
+    background-color: black;
+    text-align: center;
+    padding: 20px 0px;
 }
